2006-11-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule.el (load-with-code-conversion)
	(with-category-table): Use with-current-buffer.
	(after-insert-file-set-coding): Use restore-buffer-modified-p.

2006-11-24  Eli Zaretskii  <eliz@gnu.org>

	* mail/smtpmail.el (smtpmail-send-it):
	Copy buffer-file-coding-system from the mail buffer.  Possibly add a
	MIME header for the message encoding.
	Bind coding-system-for-write around the call to mail-do-fcc.
	Use smtpmail-code-conv-from to encode queued mail messages.

2006-11-24  Juanma Barranquero  <lekktu@gmail.com>

	* tabify.el (tabify-regexp): Doc fix.

	* net/rcirc.el (rcirc-buffer-maximum-lines):
	* progmodes/gud.el (jdb): Fix space/tab mixup in docstrings.

	* play/gomoku.el (gomoku-terminate-game, gomoku-human-takes-back)
	(gomoku-prompt-for-move, gomoku-human-plays, gomoku-offer-a-draw):
	Fix typos in output messages.
	(gomoku-vector-length, gomoku-init-board): Fix typos in docstrings.

2006-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hexl.el (hexl-mode): Don't try to guess the max-address: get it from
	the horse's mouth.
	(hexlify-buffer): Don't re-encode an arg that's already encoded.

2006-11-23  Michael Kifer  <kifer@cs.stonybrook.edu>

	* ediff-diff.el (ediff-exec-process, ediff-same-file-contents):
	Remove condition-case.

2006-11-23  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-comment-indent): Do not move point in
	default case.

2006-11-21  Romain Francoise  <romain@orebokech.com>

	* emacs-lisp/find-func.el (find-library-name): Don't strip ".el"
	from library name (reverts change of 2005-10-25).

2006-11-21  Lennart Borgman  <lennart.borgman.073@student.lu.se>

	* tutorial.el (tutorial--default-keys): Add newline and
	delete-backward-char bindings.
	(tutorial--detailed-help): Save excursion when finding keys.
	Correct warning string for M-x FOO case.
	(tutorial--display-changes): Print special keys in tutorial style.
	Tweak search regexp for changed keys.
